assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Pontano+Sans:wght@300&family=Stint+Ultra+Expanded&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    text-decoration: none;
}

body {
    font-family: 'pontano sans', sans-serif;
    font-weight: 300;
    color: #1b4552;
}

/*headings and logo*/

h1,
h2 {
    font-family: 'stint ultra expanded';
    color: #183e4b;
    text-transform: uppercase;
}

/* nav links*/

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #183e4b;
}

.nav-toggle-label {
    color: white;
    display: none;
}



#nav-toggle {
    display: none;
}

.logo {
    font-size: 3rem;
    margin-left: 2rem;
    font-weight: 1000;
    font-family: 'stint ultra expanded';
    color: white;
    text-transform: uppercase;
}

.menu {
    font-size: 1.5rem;
    display: flex;
    line-height: 4.5rem;
    list-style: none;
}

.menu li {
    margin-right: 2rem;
}

.menu a {
    text-decoration: none;
    color: white;
}

.menu a:hover {
    color: #d74a49;
}

/* hero image */

#hero-image {
    background: url('../images/The_Parade\,_Leamington_Spa_\(4\)_\(adjusted\).webp') no-repeat center center/cover;
    height: 600px;
    width: 100%;
}

/* history section */

.flex-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.flex-container>div {
    margin: 2rem;
}

.flex-text {
    text-align: justify;
    width: 45%;
}

.flex-image {
    height: 300px;
}



/* footer */

footer {
    height: 4.5rem;
    
}

.social-media {
    display: flex;
    justify-content: space-around;
    align-items: center;
    list-style-type: none;
    font-size: 2rem;
    min-height: 90%;
    background-color: #183e4b;
}

i {
    color: white;
}

/* gallery */

#gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
}

#gallery img {
    width: 30%;
    height: auto;
    object-fit: cover;
    object-position: center;
    padding: 0.5rem;
}

/* form */

#form-image {
    background: url(../images/chesterton-windmill.webp);
    background-size: cover;
    background-position: center;
    height: 56rem;
}

.form {
    clear: both;
    padding: 2rem;
}

.form-content {
    margin: 7rem 0 0 7rem;
    padding: 2rem;
    background-color: rgba(152, 159, 173, 0.6);
    max-width: 30%;

}

label {
    font-weight: bold;
    color: #183e4b;

}

.input-box {
    color: #183e4b;
    border: solid 0.05rem #183e4b;
    background: transparent;
    border-radius: 0.25rem;
}

.input-box:hover {
    background: whitesmoke;
}

.message-box {
    height: 5rem;
    width: 100%;
}

button {
    padding: 0.5em 1em;
    background-color: #183e4b;
    color: whitesmoke;
    border-radius: 0.25rem;
    font-size: 100%;
}

button:hover {
    background-color: whitesmoke;
    color: #183e4b;
}

/* media queries*/

@media screen and (max-width: 1000px) {

    .logo {
        font-size: 2rem;
    }

    .menu {
        font-size: 1rem;
    }

      .flex-container {
        flex-direction: column;
    }

    .flex-container>* {
        width: 95%;
    }

    .flex-image {
        max-width: 100%;
        height: auto;
    }

        #embed-video {
            display: flex;
            justify-content: center;
            max-width: 100%;
            max-height: 100%;
        }

    #gallery img {
        width: 45%;
    }
}

@media screen and (max-width: 768px) {

    .form-content {
        max-width: 50%;
    }

}

@media screen and (max-width: 750px) {
    .form-content > h1 {
        font-size: 1.25rem;
    }
}

@media screen and (max-width: 700px) {
    .logo {
        font-size: 1.5rem;
    }
}

@media screen and (max-width:605px) {

    #gallery img {
            width: 100%;
        }
        
                header {
                    padding: 0 1rem;
                    position: relative;
                    z-index: 99;
                    width: 100%;
                    box-shadow: 0 2px 2px #183e4b;
                    display: flex;
                    justify-content: space-evenly;
                    align-items: baseline;
                    color: white;
                    background-color: #183e4b;
                }

                
        
                #nav-toggle:checked~.menu {
                    display: block;
                }
        
                #nav-toggle {
                    display: none;
                }

                .nav-toggle-label {
                    display: block;
                    line-height: 4.5rem;
                    font-size: 1.5rem;
                    margin: 0 2rem 0 2rem;
                }
        
                .menu {
                    position: absolute;
                    width: 100%;
                    left: 0;
                    padding: 0 1rem;
                    box-shadow: 0 2px 2px;
                    display: none;
                    top: 100%;
                    background-color: #183e4b;
                }

                .logo {
                    margin-right: 2rem;
                }

}

@media screen and (max-width: 450px) {

    .logo {
        font-size: 1.25rem;
    }
}

@media screen and (max-width: 400px) {

    .logo {
        font-size: 1rem;
    }
}

@media screen and (max-width: 350px) {

    .logo {
        font-size: 0.75rem;
    }
}

